--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
   "name": "real_state",
   "version": "1.0.0",
-  "main": "app.ts",
+  "main": "api/app.ts",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node api/app.ts",
+    "dev": "nodemon"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/node": "^22.0.0",
+    "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "@prisma/client": "^5.17.0",
+    "bcrypt": "^5.1.1",
+    "express": "^4.19.2",
+    "prisma": "^5.17.0"
   }
 }
